objects/ResourcePayment__c/ResourcePayment__c.object-meta.xml
<CustomObject>
    <label>Resource Payment</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>