objects/ResourcePayment__c/fields/PayStatus__c.field-meta.xml
<CustomField>
    <fullName>PayStatus__c</fullName>
    <label>Pay Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Other-Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>